fixed text legibility issue

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ main {
   margin: 0 auto;
   max-width: 90%;
   padding: 50px 30px;
+  text-shadow: 2px 2px 5px black;
 }
 :root {
   --primary: #9a8cfe;
